--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -29,7 +29,7 @@
                     </div>
                     <div class="mediaDivider"></div>
                     <div id="externalMedia">
-                        <div class="mediaContainer">
+                        <!-- <div class="mediaContainer">
                             <a href="<%- lang('landing.mediaGitHubURL') %>" class="mediaURL" id="linkURL">
                                 <svg id="linkSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
@@ -38,7 +38,7 @@
                                     </g>
                                 </svg>
                             </a>
-                        </div>
+                        </div> -->
                         <div class="mediaContainer">
                             <a href="<%- lang('landing.mediaTwitterURL') %>" class="mediaURL" id="twitterURL">
                                 <svg id="youtubeSVG" class="mediaSVG" viewBox="0 0 1200 1227" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -122,10 +122,15 @@
             <div class="bot_wrapper">
                 <div id="launch_content">
                     <button id="launch_button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-play">
+                            <polygon points="6 3 20 12 6 21 6 3"/>
+                        </svg>
                         <%- lang('landing.launchButton') %>
                     </button>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label"><%- lang('landing.launchButtonPlaceholder') %></button>
+                    <button id="server_selection_button" class="bot_label">
+                        <%- lang('landing.launchButtonPlaceholder') %>
+                    </button>
                 </div>
                 <div id="launch_details">
                     <div id="launch_details_left">
