errors from landing

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -29,7 +29,7 @@
                     </div>
                     <div class="mediaDivider"></div>
                     <div id="externalMedia">
-                        <!-- <div class="mediaContainer">
+                         <div class="mediaContainer">
                             <a href="<%- lang('landing.mediaGitHubURL') %>" class="mediaURL" id="linkURL">
                                 <svg id="linkSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
                                     <g>
@@ -38,7 +38,7 @@
                                     </g>
                                 </svg>
                             </a>
-                        </div> -->
+                        </div> 
                         <div class="mediaContainer">
                             <a href="<%- lang('landing.mediaTwitterURL') %>" class="mediaURL" id="twitterURL">
                                 <svg id="youtubeSVG" class="mediaSVG" viewBox="0 0 1200 1227" fill="none" xmlns="http://www.w3.org/2000/svg">
